--- a/javascript.org
+++ b/javascript.org
@@ -3,6 +3,8 @@
 #+FILETAGS: :javascript:
 #+STARTUP: hideblocks
 
+Related: [[file:html.org][wiki:Browser, DOM and CSS]], [[file:linux.org][wiki:Linux]]
+
 * Nodejs
 ** Background
 *** History
