--- a/README.org
+++ b/README.org
@@ -21,5 +21,12 @@ using different media forms: books, blog posts, videos, code snippets, ...
    Eat enough healthy fats (omega-3), use flash cards and try to memorize
 small tasks in a memory palace.
 
-* TODO Folder Structure
-  To be defined.
+* Index
+** [[file:algorithms.org][wiki:Algorithms]]
+** [[file:c.org][wiki:C]]
+** [[file:cryptography.org][wiki:Cryptography]]
+** [[file:handmade-hero.org][wiki:Handmade Hero]]
+** [[file:html.org][wiki:DOM, Html and CSS]]
+** [[file:javascript.org][wiki:Javascript]]
+** [[file:linux.org][wiki:Linux]]
+** [[file:pixel-art.org][wiki:Pixel Art]]
